...
            }
        }

        var accessibilityIdentifier: String {
            switch self {
            case .start:
                "startRecordingButton"
            case .stop:
                "stopRecordingButton"
            }
        }
    }
}
...
