...
                .bold()
                .underline()
                .font(.title3)
            }
        }
        .buttonStyle(.glassProminent)
        .accessibilityIdentifier("ProvideLocationButton")
    }
    
    private var restrictedAccess: some View {
        VStack(spacing: 8) {
            HStack {
                Image(systemName: "location.slash")
...
